tree-sitter-syncat-stylesheet/corpus/branch-check
============
Branch check
============

raw_element [tag_name "script"] raw_text,
raw_element [tag_name "script"] raw_text,
raw_element [> tag_name "script"] > raw_text,
raw_element [> tag_name "script"] *,
{
  language: js;
}

---

(stylesheet
  (rule
    (selector (node_kind) (branch_check (selector (node_kind) (token))) (node_kind))
    (selector (node_kind) (branch_check (selector (node_kind) (token))) (node_kind))
    (selector (node_kind) (branch_check (selector (direct_child (node_kind)) (token))) (direct_child (node_kind)))
    (selector (node_kind) (branch_check (selector (direct_child (node_kind)) (token))) (any))
    (styles 
      (style (style_name) (style_value)))))
