tree-sitter-syncat-stylesheet/corpus/comprehensive
==================
Comprehensive test
==================

root {
  color: white;
}

string escape {
  color: cyan;
}

// this is a comment
comment {
  color: red;
  italic: true;
}

"{" {
  color: #F38ca1;
}

"}" {
  color: 213;
}

string interpolation "${" {
  /**
   * This is a long comment
   */
  color: 90;
}

string interpolation "}" {
  color: 199;
}

---

(source_file
  (rule (node_kind) 
    (style (style_name) (style_value)))
  (rule (node_kind) (node_kind)
    (style (style_name) (style_value)))
  (comment)
  (rule (node_kind)
    (style (style_name) (style_value))
    (style (style_name) (style_value)))
  (rule (token) 
    (style (style_name) (style_value)))
  (rule (token) 
    (style (style_name) (style_value)))
  (rule (node_kind) (node_kind) (token)
    (comment)
    (style (style_name) (style_value)))
  (rule (node_kind) (node_kind) (token)
    (style (style_name) (style_value))))
