tree-sitter-syncat-stylesheet/corpus/direct-child-specifier
======================
Direct child specifier
======================

function_item > identifier {
  color: blue;
}

---

(stylesheet
  (rule
    (selector (direct_child (node_kind)) (node_kind))
    (styles
      (style (style_name) (style_value)))))
