tree-sitter-syncat-stylesheet/corpus/no-children
===========
No children
===========

parent child.,
parent > child. {
  color: red;
}

---

(stylesheet
  (rule
    (selector (node_kind) (no_children (node_kind)))
    (selector (node_kind) (direct_child (no_children (node_kind))))
    (styles
      (style (style_name) (style_value)))))
