tree-sitter-syncat-stylesheet/corpus/simple-kind
======================
Simple kind with style
======================

root {
  color: red;
}

---

(stylesheet
  (rule 
    (selector (node_kind))
    (styles
      (style (style_name) (style_value)))))
