tree-sitter-syncat-stylesheet/corpus/styled-kind
======================
Simple kind with style
======================

root {
  color: red;
}

---

(source_file
  (rule 
    (selector (node_kind))
    (styles
      (style (style_name) (style_value)))))
