tree-sitter-syncat-stylesheet/corpus/weird-style
======================
Simple kind with style
======================

root {
  --var-test: red;
  font-weight: bold;
}

---

(source_file
  (rule (node_kind) 
    (style (style_name) (style_value))
    (style (style_name) (style_value))))

